<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailUserActivity">

    <include
        layout="@layout/view_error"
        android:visibility="gone" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_detail_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/avatar_picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@id/img_detail_avatar"
        app:layout_constraintStart_toStartOf="@id/img_detail_avatar"
        app:layout_constraintTop_toBottomOf="@id/img_detail_avatar"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_login"
        app:layout_constraintStart_toStartOf="@id/tv_detail_login"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_login"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tv_detail_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        tools:text="@tools:sample/us_phones" />

    <TextView
        android:id="@+id/tv_repository_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repository_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_url" />

    <TextView
        android:id="@+id/tv_following_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_repository_label"
        app:layout_constraintEnd_toStartOf="@id/tv_repository_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_repository_label" />

    <TextView
        android:id="@+id/tv_follower_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follower_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_repository_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_repository_label"
        app:layout_constraintTop_toTopOf="@id/tv_repository_label" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/fab_fav_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_not_favorite_border_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_following_label"
        app:layout_constraintStart_toStartOf="@+id/tv_following_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository_label"
        app:layout_constraintStart_toStartOf="@+id/tv_repository_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_follower_label"
        app:layout_constraintStart_toStartOf="@+id/tv_follower_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower_label" />


</androidx.constraintlayout.widget.ConstraintLayout>